--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,45 @@
+# ===============================
+#       SERVER
+# ===============================
+spring.profiles.active=dev
 
 # ===============================
-#       DATABASE
+#       ATTACH
 # ===============================
-spring.datasource.url=jdbc:postgresql://localhost:5432/kun_uz
-spring.datasource.username=postgres
-spring.datasource.password=root123
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# ===============================
+#       SMS
+# ===============================
+sms.url=https://api.smsfly.uz/
+sms.key=asdasdasd
+
+# ===============================
+#       EMAIL
+# ===============================
+spring.mail.host=smtp.mail.ru
+spring.mail.port=465
+spring.mail.username=suxrobbek997@gmail.com
+spring.mail.password=Jx8aFdvEzZ2syJTbsfxI
+spring.mail.protocol=smtps
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=50000
+spring.mail.properties.mail.smtp.timeout=50000
+spring.mail.properties.mail.smtp.writetimeout=50000
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+
+# ===============================
+#       LOG
+# ===============================
+logging.level.com.company=INFO
+#logging.level.root=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %highlight(%-5level) - %logger  - %msg%n
+logging.file.name=logs/my-log.log
+logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss}  %-5level - %logger  - %msg%n
+logging.file.max-size=1MB
+logging.pattern.rolling-file-name=logs/my-log-%d{yyyy-MM-dd}.%i.log
 
